...
                        <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <view contentMode="scaleToFill" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" translatesAutoresizingMaskIntoConstraints="NO" id="5eA-er-LNz" customClass="FSCalendar">
                                <rect key="frame" x="8" y="32" width="290" height="343"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="fsCalendar">
                                    <bool key="isElement" value="NO"/>
                                </accessibility>
                                <constraints>
                                    <constraint firstAttribute="width" constant="398" id="GW6-VR-Uoo">
                                        <variation key="heightClass=compact-widthClass=regular" constant="410"/>
                                    </constraint>
...
                                                </variation>
                                            </view>
                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hWe-38-EB7" userLabel="MoodView">
                                                <rect key="frame" x="8" y="199" width="353" height="82"/>
                                                <subviews>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="How are you feeling today?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rsT-6A-ffh">
                                                        <rect key="frame" x="54" y="10" width="245" height="24"/>
                                                        <constraints>
                                                            <constraint firstAttribute="width" constant="230" id="2iF-pB-63I">
                                                                <variation key="heightClass=regular-widthClass=compact" constant="245"/>
                                                            </constraint>
                                                            <constraint firstAttribute="width" constant="245" id="yyp-Aw-Ynx"/>
                                                        </constraints>
...
                                                <variation key="heightClass=regular-widthClass=compact">
                                                    <mask key="constraints">
                                                        <include reference="yAh-ai-9Gi"/>
                                                    </mask>
                                                </variation>
                                            </textView>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Notes" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PjQ-S9-9b7">
                                                <rect key="frame" x="154.5" y="299" width="60" height="24"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="51" id="0gu-6F-yBG">
                                                        <variation key="heightClass=regular-widthClass=compact" constant="60"/>
                                                    </constraint>
                                                    <constraint firstAttribute="width" constant="60" id="Cav-dV-LcS"/>
...
                                <include reference="WBo-lh-B4i"/>
                                <include reference="e9L-0A-fbY"/>
                                <include reference="lq8-ZH-YyJ"/>
                            </mask>
                        </variation>
                    </view>
                    <navigationItem key="navigationItem" title="Mood Tracker" id="asB-FR-ttC"/>
                    <connections>
                        <outlet property="calendar" destination="5eA-er-LNz" id="6d2-kW-iG1"/>
                        <outlet property="dateLbl" destination="hjr-mF-hAY" id="QBE-5z-R6L"/>
                        <outlet property="feelsLikeLbl" destination="Ex4-Ll-3PJ" id="zZ6-jg-kbS"/>
                        <outlet property="locationImg" destination="f2H-aF-8Tb" id="XEE-Cl-eWd"/>
                        <outlet property="locationLbl" destination="7PY-X9-RNa" id="78d-gd-XoN"/>
...
