...
        </scene>
    </scenes>
    <resources>
        <image name="Asset 21" width="24" height="24"/>
        <image name="moodtracker" width="24" height="22.5"/>
        <image name="profile" width="24" height="21.5"/>
        <image name="studyassistant" width="24" height="28"/>
    </resources>
</document>

